# LTC-Anisotropic

./: README.md  npy_to_cpp.py  npy_to_cudatex_isotropic.py  npy_to_glsl.py
LUT/: alpha_lambda_theta_phi.npy  alpha_theta.npy  alpha_theta_fresnel.npy  alphax_alphay_theta_phi.cpp  alphax_alphay_theta_phi.glsl  alphax_alphay_theta_phi.npy
fitting/: anisotropic_ggx.py  fit_alpha_lambda_theta_phi.py  fit_alpha_theta.py  fit_alphax_alphay_theta_phi.py  ltc.py  utils.py
opengl_renderer/: CMakeLists.txt  imgui_impl.cpp  imgui_impl.h  ltc-amplitude-sym-64k.inl  ltc-amplitude-sym.inl  ltc-aniso-sym-16.inl  ltc-aniso-sym-l2.inl  ltc-aniso-sym.inl  ltc-aniso.inl  ltc-iso.inl  ltc_isotropic_8x8.h  ltc_isotropic_8x8_theta_sqrtalpha.h  ltc_isotropic_8x8_z_alpha.h  ltc_isotropic_8x8_z_sqrtalpha.h  ltc_m_reparam.h  sphere.cpp
opengl_renderer/glad/: glad.c  glad.h
opengl_renderer/shaders/: Background.glsl  Light.glsl  Sphere.glsl  Viewer.glsl
opengl_renderer/submodules/dj_opengl/: dj_opengl.h
